fix: logo height 80px (between 72 too small and 88 too much)

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -369,7 +369,7 @@ h4 {
 }
 
 .logo img {
-  height: 72px;
+  height: 80px;
   width: auto;
   max-width: none;
   display: block;
